# test-lambdas

./: README.md
NODE/homepage-assets-path-generator/: index.js  package.json
NODE/smarttech-assets-path-generator/: index.js  package.json
RUST/vehicle-registration/: Cargo.toml
RUST/vehicle-registration/src/: main.rs
SCRIPTS/JS/: emi-calculator.js
