[package]
name = "get-updated-pricing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.11.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
http = "1.1.0"
rand = "0.8.3"
tokio-stream = "0.1.8"
aws-config = "1.1.7"
aws-sdk-dynamodb = "1.16.0"
tokio = { version = "1.5.0", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"